# socrates

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  buf.gen.yaml  buf.yaml  build-all.sh  build.gradle.kts  build_windows.ps1  capability.json  conanfile.py  gradle.properties  pyproject.toml  settings.gradle.kts  setup_windows.ps1
bindings/c/: socrates.cpp  socrates_c.h
bindings/python/socrates_engine/: __init__.py  __main__.py  runtime.py
cmake/: ArchOptimizations.cmake  CompilerWarnings.cmake  Dependencies.cmake  EdgeAIOptions.cmake  FindQNN.cmake  Packaging.cmake  set_cxx20.cmake
configs/: benchmark.schema.json  benchmark_thresholds.example.json  logging.example.json  runtime.schema.json
daemon/: CMakeLists.txt  daemon_config.example.json  main.cpp
docs/: CODING_CONVENTIONS.md  ENGINE_BLUEPRINT.md  IMPLEMENTATION_TASKS.md
fixtures/calibration/: sample_prompts.jsonl
fixtures/models/tinyllama/: README.md  manifest.json  manifest.textproto  two_node_plan.json
include/socrates/: api.h  cancellation.h  tracing.h  types.h
include/socrates/cluster/: membership_service.h
include/socrates/discovery/: discovery_service.h
include/socrates/pipeline/: inference_pipeline.h
include/socrates/profiler/: capability_profiler.h  platform_profiler.h
include/socrates/runtime/: backend_dispatch.h  edge_runtime.h  model_catalog.h
include/socrates/trace/: trace_recorder.h
include/socrates/transport/: tensor_codec.h
model-repo/: manifest.json
platform/android/: AndroidManifest.xml  build.gradle.kts
platform/android/app/: build.gradle.kts  proguard-rules.pro
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/multiverse/socrates/app/: InferenceActivity.kt
platform/apple/: SocratesEngine.podspec
proto/socrates/v1/: control_plane.proto  data_plane.proto  model_manifest.proto  placeholder.proto  trace.proto
python/socrates_engine/: __init__.py  calibration.py  fetch.py  manifest.py  sensitivity.py  sharder.py
scripts/: build_android.sh  build_xcframework.sh
src/: CMakeLists.txt
src/cluster/: CMakeLists.txt  bully_election.cpp  membership_service.cpp
src/discovery/: CMakeLists.txt  bluetooth_discovery.cpp  discovery_service.cpp  mdns_discovery.cpp  mdns_discovery_stub.cpp  udp_discovery.cpp
src/inference/: CMakeLists.txt  backend_registry.cpp  executorch_qnn_backend.cpp  litert_backend.cpp  llama_backend.cpp  mlx_backend.cpp
src/model/: CMakeLists.txt  manifest_repository.cpp  manifest_validator.cpp  model_manager.cpp
src/persistence/: CMakeLists.txt  sqlite_assignment_store.cpp
src/pipeline/: CMakeLists.txt  inference_pipeline.cpp
src/profiler/: CMakeLists.txt  capability_profiler.cpp  network_profiler.cpp
src/profiler/platform/: android_profiler.cpp  apple_profiler.mm  linux_profiler.cpp  windows_profiler.cpp
src/runtime/: CMakeLists.txt  backend_dispatch.cpp  edge_runtime.cpp  logging.cpp  model_catalog.cpp
src/scheduler/: CMakeLists.txt  memory_scheduler.cpp
src/security/: CMakeLists.txt  identity_provider.cpp
src/trace/: CMakeLists.txt  trace_recorder.cpp  tracing.cpp
src/transport/: CMakeLists.txt  grpc_transport.cpp  tensor_codec.cpp
tests/: CMakeLists.txt
tests/contract/: CMakeLists.txt  manifest_tests.cpp  protobuf_tests.cpp
tests/contract/manifests/: golden_tinyllama.json  malformed_backward_range.json  malformed_bad_ordinals.json  malformed_invalid_uri_scheme.json  malformed_layer_gap.json  malformed_missing_model_id.json  malformed_shard_count.json  malformed_unknown_field.json
tests/e2e/: CMakeLists.txt  Dockerfile  Dockerfile.test-controller  docker-compose.yml  e2e_tests.cpp  multi_node_test.cpp  run_multi_node.sh
tests/e2e/scenarios/: test_cluster_formation.py  test_incompatible_capacity.py  test_leader_loss.py  test_streaming_pipeline.py  test_worker_loss.py
tests/integration/: CMakeLists.txt  cluster_tests.cpp  membership_profiler_tests.cpp  transport_tests.cpp
tests/unit/: CMakeLists.txt  discovery_tests.cpp  result_tests.cpp  types_tests.cpp
tests/unit/cluster/: CMakeLists.txt
tests/unit/discovery/: CMakeLists.txt  discovery_tests.cpp
tests/unit/inference/: CMakeLists.txt
tests/unit/model/: CMakeLists.txt
tests/unit/persistence/: CMakeLists.txt
tests/unit/pipeline/: CMakeLists.txt
tests/unit/profiler/: CMakeLists.txt
tests/unit/runtime/: CMakeLists.txt  runtime_tests.cpp
tests/unit/scheduler/: CMakeLists.txt  scheduler_property_tests.cpp
tests/unit/security/: CMakeLists.txt  security_tests.cpp
tests/unit/trace/: CMakeLists.txt
tests/unit/transport/: CMakeLists.txt
tools/: CMakeLists.txt  benchmark.cpp  manifest_validator.cpp  master_cli.cpp  profiler.cpp  trace_replay.cpp  worker_cli.cpp
