[project]
name = "socrates-engine"
version = "0.1.0"
description = "Edge AI Runtime offline tooling — sharding, calibration, manifest creation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Multiverse" }]
keywords = ["llm", "edge", "inference", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "protobuf>=4.25,<5",
    "grpcio>=1.65,<2",
    "numpy>=1.26,<2",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "black>=24,<25",
    "ruff>=0.5,<1",
    "pyright>=1.1,<2",
    "mypy>=1.10,<2",
]

[project.scripts]
socrates-manifest = "socrates_engine.manifest:main"
socrates-shard = "socrates_engine.sharder:main"
socrates-calibrate = "socrates_engine.calibration:main"
socrates-fetch = "socrates_engine.fetch:main"
socrates-engine = "socrates_engine.__main__:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python", "bindings/python"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["generated", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["python"]
exclude = ["generated", "build", ".venv"]
reportMissingImports = true
reportUnusedVariable = "error"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
